--- a/source-css/bonquisition.css
+++ b/source-css/bonquisition.css
@@ -100,7 +100,7 @@ a[href|="/lbrumpbump"] {display: block; clear: none; float: left; width: 218px; 
 a[href|="/bondisgust"] {display: block; clear: none; float: left; width: 110px; height: 150px; background-position: 0px  -915px; background-image:url(%%stylesheet5%%) }
 a[href|="/boncake"] {display: block; clear: none; float: left; width: 240px; height: 150px; background-position: 0px  -1068px; background-image:url(%%stylesheet5%%) }
 a[href|="/witchbelle"] {display: block; clear: none; float: left; width: 188px; height: 240px; background-position: 0px  -1221px; background-image:url(%%stylesheet5%%) }
-a[href|="/lbhuggles"] {display: block; clear: none; float: left; width: 150px; height: 150px; background-position: 0px  -1464px; background-image:url(%%stylesheet5%%) }
+a[href|="/lbhuggles"] {display: block; clear: none; float: left; width: 150px; height: 146px; background-position: 0px  -1464px; background-image:url(%%stylesheet5%%) }
 a[href|="/sunandluis"] {display: block; clear: none; float: left; width: 283px; height: 200px; background-position: 0px  -1611px; background-image:url(%%stylesheet5%%) }
 a[href|="/ravebon"] {display: block; clear: none; float: left; width: 132px; height: 153px; background-position: 0px  -0px; background-image:url(%%stylesheet6%%) }
 a[href|="/ribbonbon"] {display: block; clear: none; float: left; width: 98px; height: 100px; background-position: 0px  -156px; background-image:url(%%stylesheet6%%) }
@@ -112,6 +112,8 @@ a[href|="/lbhappyhug"] {display: block; clear: none; float: left; width: 154px; 
 a[href|="/bonunsure"] {display: block; clear: none; float: left; width: 145px; height: 140px; background-position: 0px  -1031px; background-image:url(%%stylesheet6%%) }
 a[href|="/lbcutenuzzle"] {display: block; clear: none; float: left; width: 229px; height: 148px; background-position: 0px  -1173px; background-image:url(%%stylesheet6%%) }
 a[href|="/lbcheek"] {display: block; clear: none; float: left; width: 163px; height: 139px; background-position: 0px  -1321px; background-image:url(%%stylesheet6%%) }
+a[href|="/bondevil"] {display: block; clear: none; float: left; width: 124px; height: 150px; background-position: 0px  -1462px; background-image:url(%%stylesheet6%%) }
+a[href|="/angelibon"] {display: block; clear: none; float: left; width: 116px; height: 150px; background-position: 0px  -1614px; background-image:url(%%stylesheet6%%) }
 div.titlebox span.word{display:none}div.titlebox span.number:after{content:" sweets eaters"}
 .sidecontentbox .helplink+.title h1{font-size:0!important}.sidecontentbox .helplink+.title h1:before{font-size:10pt!important;content:"BONALCOHOLICS"}
 body{background: url(%%background%%) no-repeat fixed center center }
