--- a/source-css/ponk.css
+++ b/source-css/ponk.css
@@ -77,6 +77,13 @@ a[href|="/snortponk"] {width:70px; height:70px; background-position: -1468px -0p
 a[href|="/supersaiyan"] {width:75px; height:100px; background-position: -1538px -0px}
 a[href|="/zomponk"] {width:169px; height:200px; background-position: -1613px -0px}
 
+
+/* c-sheet */
+
+a[href|="/theBenger"] {display:block; float: left; cursor:default; overflow:hidden; background-repeat: no-repeat;background-image:url(%%theBenger%%);}
+a[href|="/theBenger"] {width:150px; height:112px; background-position: -0px -0px}
+
+
 /* End Emote CSS */
 
 
