--- a/source-css/shymotes.css
+++ b/source-css/shymotes.css
@@ -96,7 +96,87 @@ a[href="/fsm48"],
 
 a[href="/fsm49"],
 
-a[href="/fsm50"]{
+a[href="/fsm50"],
+
+a[href="/fsm51"],
+
+a[href="/fsm52"],
+
+a[href="/fsm53"],
+
+a[href="/fsm54"],
+
+a[href="/fsm55"],
+
+a[href="/fsm56"],
+
+a[href="/fsm57"],
+
+a[href="/fsm58"],
+
+a[href="/fsm59"],
+
+a[href="/fsm60"],
+
+a[href="/fsm61"],
+
+a[href="/fsm62"],
+
+a[href="/fsm63"],
+
+a[href="/fsm64"],
+
+a[href="/fsm65"],
+
+a[href="/fsm66"],
+
+a[href="/fsm67"],
+
+a[href="/fsm68"],
+
+a[href="/fsm69"],
+
+a[href="/fsm70"],
+
+a[href="/fsm71"],
+
+a[href="/fsm72"],
+
+a[href="/fsm73"],
+
+a[href="/fsm74"],
+
+a[href="/fsm75"],
+
+a[href="/fsm76"],
+
+a[href="/fsm77"],
+
+a[href="/fsm78"],
+
+a[href="/fsm79"],
+
+a[href="/fsm80"],
+
+a[href="/fsm81"],
+
+a[href="/fsm82"],
+
+a[href="/fsm83"],
+
+a[href="/fsm84"],
+
+a[href="/fsm85"],
+
+a[href="/fsm86"],
+
+a[href="/fsm87"],
+
+a[href="/fsm88"],
+
+a[href="/fsm89"],
+
+a[href="/fsm90"]{
 
   display:block;
 
@@ -607,6 +687,1072 @@ a[href|="/fsm50"]{
   height:70px;
 
 }
+
+a[href|="/fsm51"]{
+
+  background-position:-350px -0px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm52"]{
+
+  background-position:-350px -70px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm53"]{
+
+  background-position:-350px -140px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm54"]{
+
+  background-position:-350px -210px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm55"]{
+
+  background-position:-350px -280px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm56"]{
+
+  background-position:-350px -350px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm57"]{
+
+  background-position:-350px -420px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm58"]{
+
+  background-position:-350px -490px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm59"]{
+
+  background-position:-350px -560px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm60"]{
+
+  background-position:-350px -630px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+
+a[href|="/fsm61"]{
+
+  background-position:-420px -0px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/fsm62"]{
+
+  background-position:-420px -70px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/fsm63"]{
+
+  background-position:-420px -140px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/fsm64"]{
+
+  background-position:-420px -210px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/fsm65"]{
+
+  background-position:-420px -280px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/fsm66"]{
+
+  background-position:-420px -350px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/fsm67"]{
+
+  background-position:-420px -420px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/fsm68"]{
+
+  background-position:-420px -490px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/fsm69"]{
+
+  background-position:-420px -560px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/fsm70"]{
+
+  background-position:-420px -630px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/fsm71"]{
+
+  background-position:-490px -0px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/fsm72"]{
+
+  background-position:-490px -70px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm73"]{
+
+  background-position:-490px -140px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm74"]{
+
+  background-position:-490px -210px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm75"]{
+
+  background-position:-490px -280px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm76"]{
+
+  background-position:-490px -350px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm77"]{
+
+  background-position:-490px -420px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm78"]{
+
+  background-position:-490px -490px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm79"]{
+
+  background-position:-490px -560px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm80"]{
+
+  background-position:-490px -630px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm81"]{
+
+  background-position:-560px -0;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm82"]{
+
+  background-position:-560px -70px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/fsm83"]{
+
+  background-position:-560px -140px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/fsm84"]{
+
+  background-position:-560px -210px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm85"]{
+
+  background-position:-560px -280px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm86"]{
+
+  background-position:-560px -350px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm87"]{
+
+  background-position:-560px -420px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm88"]{
+
+  background-position:-560px -490px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm89"]{
+
+  background-position:-560px -560px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+a[href|="/fsm90"]{
+
+  background-position:-560px -630px;
+
+  width:70px;
+
+  height:70px;
+
+
+}
+
+
+
+a[href="/cm00"],
+
+a[href="/cm01"],
+
+a[href="/cm02"],
+
+a[href="/cm03"],
+
+a[href="/cm04"],
+
+a[href="/cm05"],
+
+a[href="/cm06"],
+
+a[href="/cm07"],
+
+a[href="/cm08"],
+
+a[href="/lunam00"],
+
+a[href="/lunam01"],
+
+a[href="/lunam02"],
+
+a[href="/lunam03"],
+
+a[href="/lunam04"],
+
+a[href="/lunam05"],
+
+a[href="/lunam06"],
+
+a[href="/lunam07"],
+
+a[href="/lunam08"],
+
+a[href="/lunam09"],
+
+a[href="/lunam10"],
+
+a[href="/lunam11"],
+
+a[href="/lunam12"],
+
+a[href="/lunam13"],
+
+a[href="/lunam14"],
+
+a[href="/lunam15"],
+
+a[href="/lunam16"],
+
+a[href="/lunam17"],
+
+a[href="/lunam18"],
+
+a[href="/lunam19"],
+
+a[href="/lunam20"],
+
+a[href="/qcm00"],
+
+a[href="/qcm01"],
+
+a[href="/qcm02"],
+
+a[href="/qcm03"],
+
+a[href="/qcm04"],
+
+a[href="/qcm05"],
+
+a[href="/qcm06"],
+
+a[href="/qcm07"],
+
+a[href="/qcm08"],
+
+a[href="/qcm09"],
+
+a[href="/qcm10"],
+
+a[href="/tiam00"],
+
+a[href="/tiam01"],
+
+a[href="/tiam02"],
+
+a[href="/tiam03"],
+
+a[href="/tiam04"],
+
+a[href="/tiam05"],
+
+a[href="/tiam06"],
+
+a[href="/tiam07"],
+
+a[href="/tiam08"],
+
+a[href="/tiam09"],
+
+a[href="/tiam10"]{
+
+  display:block;
+
+  clear:none;
+
+  float:left;
+
+  background-image:url(%%shymotes02%%);
+
+}
+
+a[href|="/cm00"]{
+
+  background-position:-0px -0px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/cm01"]{
+
+  background-position:-0px -70px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/cm02"]{
+
+  background-position:-0px -140px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/cm03"]{
+
+  background-position:-0px -210px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/cm04"]{
+
+  background-position:-0px -280px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/cm05"]{
+
+  background-position:-0px -350px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/cm06"]{
+
+  background-position:-0px -420px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/cm07"]{
+
+  background-position:-0px -490px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/cm08"]{
+
+  background-position:-0px -560px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam00"]{
+
+  background-position:-0px -630px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam01"]{
+
+  background-position:-70px -0px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam02"]{
+
+  background-position:-70px -70px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam03"]{
+
+  background-position:-70px -140px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam04"]{
+
+  background-position:-70px -210px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam05"]{
+
+  background-position:-70px -280px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam06"]{
+
+  background-position:-70px -350px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam07"]{
+
+  background-position:-70px -420px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam08"]{
+
+  background-position:-70px -490px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam09"]{
+
+  background-position:-70px -560px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam10"]{
+
+  background-position:-70px -630px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam11"]{
+
+  background-position:-140px -0px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam12"]{
+
+  background-position:-140px -70px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam13"]{
+
+  background-position:-140px -140px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam14"]{
+
+  background-position:-140px -210px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam15"]{
+
+  background-position:-140px -280px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam16"]{
+
+  background-position:-140px -350px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam17"]{
+
+  background-position:-140px -420px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam18"]{
+
+  background-position:-140px -490px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam19"]{
+
+  background-position:-140px -560px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/lunam20"]{
+
+  background-position:-140px -630px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/qcm00"]{
+
+  background-position:-210px -0px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/qcm01"]{
+
+  background-position:-210px -70px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/qcm02"]{
+
+  background-position:-210px -140px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/qcm03"]{
+
+  background-position:-210px -210px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/qcm04"]{
+
+  background-position:-210px -280px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/qcm05"]{
+
+  background-position:-210px -350px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/qcm06"]{
+
+  background-position:-210px -420px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/qcm07"]{
+
+  background-position:-210px -490px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/qcm08"]{
+
+  background-position:-210px -560px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/qcm09"]{
+
+  background-position:-210px -630px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/qcm10"]{
+
+  background-position:-280px -0px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/tiam00"]{
+
+  background-position:-280px -70px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/tiam01"]{
+
+  background-position:-280px -140px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/tiam02"]{
+
+  background-position:-280px -210px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/tiam03"]{
+
+  background-position:-280px -280px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/tiam04"]{
+
+  background-position:-280px -350px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/tiam05"]{
+
+  background-position:-280px -420px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/tiam06"]{
+
+  background-position:-280px -490px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/tiam07"]{
+
+  background-position:-280px -560px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/tiam08"]{
+
+  background-position:-280px -630px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/tiam09"]{
+
+  background-position:-350px -0px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/tiam10"]{
+
+  background-position:-350px -70px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+
 
 
 
