--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -172,9 +172,9 @@ background: url(%%horsewife%%) center center no-repeat transparent;
 /*Subscriber Name Replace*/
 div.titlebox span.word {display:none}
 
-div.titlebox .subscribers span.number:after {content:" Folks preparing for Hiatus"}
+div.titlebox .subscribers span.number:after {content:" Folks who survived Hiatus 2016"}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " Weeks remaining for said Hiatus" }
+div.titlebox p.users-online span.number:after { content: " People who have actually seen this week's episode" }
 div.titlebox p.users-online span.word { display: none }
 
 /*Flair modifications*/
@@ -219,7 +219,7 @@ submitted
     28% {background-position: -300% -2400%;}
     42% {background-position: -100% -200%;}
     57% {background-position: -300% -1900%;}
-    71% {background-position: 0 -200%;}
+    71% {background-position: -200% -2400%;}
     85% {background-position: -100% -2100%}
 }
 
@@ -1117,7 +1117,7 @@ padding: 0
 .flair-excmcal {background-position: -400% -100%}
 .flair-excmcal:hover {background-position: -200% -300%} /*For Frenchie; Tavi Hover*/
 .flair-cmcsh {background-position: -300% -100%}
-.flair-cmcsh:hover {background-position: -200% -2400%} /*For Shercock_Holmes; Luna Hover*/
+.flair-cmcsh:hover {background-position: -200% -2400%} /*For Shercock_Holmes; Starlight Glimmer Hover*/
 .flair-cmcjib {background-position: -300% -100%}
 .flair-cmcjib:hover {background-position: -300% -1900%} /*For Jibodeah; Apathia Hover*/
 .flair-cmcsyn {background-position: -300% -100%}
