--- a/source-css/starlightglimmer.css
+++ b/source-css/starlightglimmer.css
@@ -611,9 +611,7 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
 
 /*---------------- END COPY ----------------*/
 
-a[href|="/starlightsmirk"], a[href|="/sgsmirk"], a[href|="/starlightwhat"], a[href|="/sgwhat"], a[href|="/starlighthappy"], a[href|="/sghappy"], a[href|="/starlighthuman"], a[href|="/sghuman"], a[href|="/fillystarlight"], a[href|="/fillysg"], a[href|="/cutestarlight"], a[href|="/cutesg"], a[href|="/snowfallfrost"], a[href|="/snowfallfrosty"], 
-
-a[href|="/starlightright"], a[href|="/sgright"], a[href|="/starlightfacehoof"], a[href|="/sgfacehoof"], a[href|="/starlightsalute"], a[href|="/sgsalute"], a[href|="/starlightshrug"], a[href|="/sgshrug"], a[href|="/starlightscrunch"], a[href|="/sgscrunch"], a[href|="/nervousstarlight"], a[href|="/nervoussg"], a[href|="/starlightunsure"], a[href|="/sgunsure"], a[href|="/starlightblush"], a[href|="/sgblush"], a[href|="/starlightgrimmer"], a[href|="/sggrimmer"], a[href|="/undercoverstarlight"], a[href|="/undercoversg"], a[href|="/starlightmenu"], a[href|="/sgmenu"], a[href|="/starlightworry"], a[href|="/sgworry"], a[href|="/starlightregret"], a[href|="/sgregret"] {
+a[href|="/starlightsmirk"], a[href|="/sgsmirk"], a[href|="/starlightwhat"], a[href|="/sgwhat"], a[href|="/starlighthappy"], a[href|="/sghappy"], a[href|="/starlighthuman"], a[href|="/sghuman"], a[href|="/fillystarlight"], a[href|="/fillysg"], a[href|="/cutestarlight"], a[href|="/cutesg"], a[href|="/snowfallfrost"], a[href|="/sffrost"], a[href|="/snowfallfrosty"], a[href|="/sffrosty"], a[href|="/starlightsurprised"], a[href|="/sgsurprised"], a[href|="/starlightreally"], a[href|="/sgreally"], a[href|="/confidentstarlight"], a[href|="/confidentsg"], a[href|="/starlightcry"], a[href|="/sgcry"], a[href|="/starlightwtf"], a[href|="/sgwtf"], a[href|="/slystarlight"], a[href|="/slysg"], a[href|="/downcaststarlight"], a[href|="/downcastsg"], a[href|="/embarrassedstarlight"], a[href|="/embarrassedsg"], a[href|="/starlightright"], a[href|="/sgright"], a[href|="/starlightfacehoof"], a[href|="/sgfacehoof"], a[href|="/starlightsalute"], a[href|="/sgsalute"], a[href|="/starlightshrug"], a[href|="/sgshrug"], a[href|="/starlightscrunch"], a[href|="/sgscrunch"], a[href|="/nervousstarlight"], a[href|="/nervoussg"], a[href|="/starlightunsure"], a[href|="/sgunsure"], a[href|="/starlightblush"], a[href|="/sgblush"], a[href|="/starlightgrimmer"], a[href|="/sggrimmer"], a[href|="/undercoverstarlight"], a[href|="/undercoversg"], a[href|="/starlightmenu"], a[href|="/sgmenu"], a[href|="/starlightworry"], a[href|="/sgworry"], a[href|="/starlightregret"], a[href|="/sgregret"], a[href|="/evilstarlight"], a[href|="/evilsg"], a[href|="/cutiemarksforcutiemarks"], a[href|="/starlighttriumph"], a[href|="/sgtriumph"], a[href|="/thrilledstarlight"], a[href|="/thrilledsg"], a[href|="/heresglimmy"] {
   display: block;
   clear: none;
   float: left;
@@ -629,9 +627,16 @@ a[href|="/starlighthappy"], a[href|="/sghappy"] { background-position: -140px 0;
 a[href|="/starlighthuman"], a[href|="/sghuman"] { background-position: -210px 0; }
 a[href|="/fillystarlight"], a[href|="/fillysg"] { background-position: 0 -70px; }
 a[href|="/cutestarlight"], a[href|="/cutesg"] { background-position: -70px -70px; }
-a[href|="/snowfallfrost"] { background-position: -140px -70px; }
-a[href|="/snowfallfrosty"] { background-position: -210px -70px; }
-
+a[href|="/snowfallfrost"], a[href|="/sffrost"] { background-position: -140px -70px; }
+a[href|="/snowfallfrosty"], a[href|="/sffrosty"] { background-position: -210px -70px; }
+a[href|="/starlightsurprised"], a[href|="/sgsurprised"] { background-position: 0 -140px; }
+a[href|="/starlightreally"], a[href|="/sgreally"] { background-position: -70px -140px; }
+a[href|="/confidentstarlight"], a[href|="/confidentsg"] { background-position: -140px -140px; }
+a[href|="/starlightcry"], a[href|="/sgcry"] { background-position: -210px -140px; }
+a[href|="/starlightwtf"], a[href|="/sgwtf"] { background-position: 0 -210px; }
+a[href|="/slystarlight"], a[href|="/slysg"] { background-position: -70px -210px; }
+a[href|="/downcaststarlight"], a[href|="/downcastsg"] { background-position: -140px -210px; }
+a[href|="/embarrassedstarlight"], a[href|="/embarrassedsg"] { background-position: -210px -210px; }
 a[href|="/starlightright"], a[href|="/sgright"] { background-position: 0 -280px; }
 a[href|="/starlightfacehoof"], a[href|="/sgfacehoof"] { background-position: -70px -280px; }
 a[href|="/starlightsalute"], a[href|="/sgsalute"] { background-position: -140px -280px; }
@@ -644,8 +649,11 @@ a[href|="/starlightgrimmer"], a[href|="/sggrimmer"] { background-position: 0 -42
 a[href|="/undercoverstarlight"], a[href|="/undercoversg"], a[href|="/starlightmenu"], a[href|="/sgmenu"] { background-position: -70px -420px; }
 a[href|="/starlightworry"], a[href|="/sgworry"] { background-position: -140px -420px; }
 a[href|="/starlightregret"], a[href|="/sgregret"] { background-position: -210px -420px; }
+a[href|="/evilstarlight"], a[href|="/evilsg"] { background-position: 0 -490px; }
+a[href|="/cutiemarksforcutiemarks"], a[href|="/starlighttriumph"], a[href|="/sgtriumph"] { background-position: -70px -490px; }
+a[href|="/thrilledstarlight"], a[href|="/thrilledsg"], a[href|="/heresglimmy"] { background-position: -140px -490px; }
 
-a[href|="/starlightpoker"], a[href|="/sgpoker"], a[href|="/starlightpetme"], a[href|="/sgpetme"], a[href|="/starlightrecoil"], a[href|="/sgrecoil"] {
+a[href|="/starlightpoker"], a[href|="/sgpoker"], a[href|="/starlightpetme"], a[href|="/sgpetme"], a[href|="/starlightrecoil"], a[href|="/sgrecoil"], a[href|="/starlightflight"], a[href|="/sgflight"] {
   display: block;
   clear: none;
   float: left;
@@ -658,8 +666,9 @@ a[href|="/starlightpoker"], a[href|="/sgpoker"], a[href|="/starlightpetme"], a[h
 a[href|="/starlightpoker"], a[href|="/sgpoker"] { background-position: 0 0; }
 a[href|="/starlightpetme"], a[href|="/sgpetme"] { background-position: -100px 0; }
 a[href|="/starlightrecoil"], a[href|="/sgrecoil"] { background-position: -200px 0; }
+a[href|="/starlightflight"], a[href|="/sgflight"] { background-position: 0 -100px; width: 200px; }
 
-a[href|="/sugarbellesg"], a[href|="/equalsugarbellesg"], a[href|="/equalsbsg"], a[href|="/equalstaff"], a[href|="/nightglidersg"], a[href|="/equalnightglidersg"], a[href|="/equalngsg"], a[href|="/binoculars"], a[href|="/equalpartyfavorsg"], a[href|="/equalpfsg"], a[href|="/doublediamondsg"], a[href|="/doubledsg"], a[href|="/partyfavorsg"] {
+a[href|="/sugarbellesg"], a[href|="/sbsg"], a[href|="/equalsugarbellesg"], a[href|="/equalsbsg"], a[href|="/equalstaff"], a[href|="/nightglidersg"], a[href|="/ngsg"], a[href|="/equalnightglidersg"], a[href|="/equalngsg"], a[href|="/binoculars"], a[href|="/equalpartyfavorsg"], a[href|="/equalpfsg"], a[href|="/doublediamondsg"], a[href|="/ddsg"], a[href|="/partyfavorsg"], a[href|="/pfsg"] {
   display: block;
   clear: none;
   float: left;
@@ -669,15 +678,15 @@ a[href|="/sugarbellesg"], a[href|="/equalsugarbellesg"], a[href|="/equalsbsg"], 
   background-image: url(%%othermotes%%) !important;
 }
 
-a[href|="/sugarbellesg"] { background-position: 0 0; }
+a[href|="/sugarbellesg"], a[href|="/sbsg"] { background-position: 0 0; }
 a[href|="/equalsugarbellesg"], a[href|="/equalsbsg"] { background-position: -70px 0; }
-a[href|="/nightglidersg"] { background-position: 0 -70px; }
+a[href|="/nightglidersg"], a[href|="/ngsg"] { background-position: 0 -70px; }
 a[href|="/equalnightglidersg"], a[href|="/equalngsg"] { background-position: -70px -70px; }
-a[href|="/partyfavorsg"] { background-position: 0px -140px; }
+a[href|="/partyfavorsg"], a[href|="/pfsg"] { background-position: 0px -140px; }
 a[href|="/equalpartyfavorsg"], a[href|="/equalpfsg"] { background-position: -70px -140px; }
 a[href|="/equalstaff"] { background-position: 0 -210px; height: 140px; }
 a[href|="/binoculars"] { background-position: -70px -210px; }
-a[href|="/doublediamondsg"], a[href|="/doubledsg"] { background-position: -70px -280px; }
+a[href|="/doublediamondsg"], a[href|="/ddsg"] { background-position: -70px -280px; }
 
 a[href|="/starlightstaff"], a[href|="/sgstaff"] {
   display: block;
